# home-station-2

./: Cargo.toml  Cross.toml  README.md  config.toml  pi-build  pi-mount
assets/widgets/weather/: build.sh
docs/: architecture.md  contributing.md  setting-up.md
src/: main.rs
src/app-config/: Cargo.toml  app.rs  lib.rs  providers.rs
src/app-driver/: Cargo.toml  bootstrap.rs  lib.rs
src/app-driver/bootstrap/: logger.rs  time_provider.rs  weather_provider.rs
src/backend/: Cargo.toml  bootstrap.rs  endpoints.rs  lib.rs  poll.rs
src/backend-common/: Cargo.toml  lib.rs
src/backend-common/endpoints/: time.rs  weather.rs
src/backend-providers/: Cargo.toml  lib.rs
src/backend-providers/airly/: Cargo.toml  lib.rs
src/backend-providers/chrono/: Cargo.toml  config.rs  lib.rs  time_provider_impl.rs
src/backend-providers/dark-sky/: Cargo.toml  config.rs  lib.rs  weather_provider_impl.rs
src/backend-providers/dummy/: Cargo.toml  lib.rs  time_provider_impl.rs  weather_provider_impl.rs
src/backend-providers/open-weather-map/: Cargo.toml  config.rs  lib.rs  weather_provider_impl.rs
src/backend/endpoints/: time.rs
src/backend/endpoints/time/: query.rs  query_executor.rs
src/backend/endpoints/weather/: query.rs  query_executor.rs
src/backend/poll/: builder.rs  command.rs  token.rs
src/driver/: Cargo.toml  bootstrap.rs  config.rs  lib.rs
src/driver/bootstrap/: create_time_service.rs  create_weather_service.rs  init_logger.rs
src/driver/config/: app.rs  display.rs  services.rs
src/frontend/: Cargo.toml  lib.rs  pages.rs
src/frontend-core/: Cargo.toml  bootstrap.rs  lib.rs  scheduler.rs  screen.rs  system.rs  vendor.rs
src/frontend-core/bootstrap/: assets.rs
src/frontend-core/navigation/: controller.rs  route.rs  router.rs
src/frontend-core/scheduler/: event.rs  event_loop.rs  task_loop.rs
src/frontend-core/screen/: creation_context.rs  screen.rs  setting_context.rs
src/frontend-core/textures/: controller.rs  loader.rs
src/frontend/pages/: home.rs
src/frontend/pages/home/: route.rs  screen.rs
src/frontend/pages/home/screen/widgets/: time.rs  weather.rs
src/i18n/: Cargo.toml
src/service/: Cargo.toml  lib.rs  poller.rs
src/service-common/: Cargo.toml  lib.rs  services.rs
src/service-common/services/: time.rs  weather.rs
src/service-providers/: Cargo.toml  lib.rs
src/service-providers/airly/: Cargo.toml  lib.rs
src/service-providers/chrono/: Cargo.toml  lib.rs
src/service-providers/dark-sky/: Cargo.toml  lib.rs
src/service-providers/dummy/: Cargo.toml  lib.rs
src/service-providers/open-weather-map/: Cargo.toml  lib.rs
src/service/poller/: command.rs  token.rs
src/service/services/: time.rs
src/service/services/time/: client.rs  request.rs  server.rs
src/service/services/weather/: client.rs  request.rs  server.rs
src/ui/: Cargo.toml  lib.rs  state.rs
src/ui-framework/: Cargo.toml  config.rs  navigation.rs  scheduler.rs  support.rs  system.rs  textures.rs
src/ui-framework/bootstrap/: conrod.rs  glium.rs
src/ui-framework/navigation/: controller.rs  route.rs  router.rs
src/ui-framework/scheduler/: event_loop.rs  task.rs  task_dispatcher.rs
src/ui-framework/screen/: creation_context.rs  setting_context.rs
src/ui-framework/system/: runtime.rs
src/ui-framework/textures/: controller.rs
src/ui/pages/home/: route.rs  screen.rs
src/ui/pages/home/screen/: widgets.rs
src/ui/pages/home/screen/widgets/: time.rs  weather.rs
