[package]
name = "lib_app_config"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
lib_backend_providers = { path = "../backend-providers" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"