[package]
name = "lib_app_driver"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
chrono = "0.4"
fern = { version = "0.5", features = ["colored"] }
lib_app_config = { path = "../app-config" }
lib_backend = { path = "../backend" }
lib_backend_common = { path = "../backend-common" }
lib_backend_providers = { path = "../backend-providers" }
lib_frontend = { path = "../frontend" }
lib_frontend_core = { path = "../frontend-core" }
log = "0.4"