[package]
name = "lib_backend_providers"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
lib_backend_airly_provider = { path = "airly" }
lib_backend_chrono_provider = { path = "chrono" }
lib_backend_dark_sky_provider = { path = "dark-sky" }
lib_backend_dummy_provider = { path = "dummy" }
lib_backend_open_weather_map_provider = { path = "open-weather-map" }