[package]
name = "lib_driver"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
chrono = "0.4"
fern = { version = "0.5", features = ["colored"] }
lib_service = { path = "../service" }
lib_service_common = { path = "../service-common" }
lib_service_providers = { path = "../service-providers" }
lib_ui = { path = "../ui" }
lib_ui_framework = { path = "../ui-framework" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"