[package]
name = "lib_backend_dark_sky_provider"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
forecast = "2.0"
lib_backend_common = { path = "../../backend-common" }
log = "0.4"
reqwest = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }