[package]
name = "lib_open_weather_map_service_provider"
version = "0.1.0"
license = "MIT"
authors = ["Patryk Wychowaniec <wychowaniec.patryk@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
hyper = "0.10"
lib_service_common = { path = "../../service-common" }
log = "0.4"
owm = { git = "https://github.com/plorefice/owm-rs" }
serde = { version = "1.0", features = ["derive"] }